stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_analysis_tests__arithmetic_zero_n_log_n_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "89d3f5ceb5c9bcad9786c8e3a97efd0712e82801c0bac8e580113f756bfebed2",
    evaluated_epoch: Epoch21,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch2_1-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "865bfa8fd95f4bc629dbd4855b74c25bf3360e61b04c82387fe5d701c7323e58",
    evaluated_epoch: Epoch22,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch2_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "203f91797a56a95708093954b212c748b6d1aa195773df514e3a3d3c92a5d22f",
    evaluated_epoch: Epoch23,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch2_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7e3a85495255003699dce7bdeb529630b4d5632a72be467761276cc5087ba160",
    evaluated_epoch: Epoch24,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch2_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7fed3db381d534c24b2d64b6b25e1ca2f23167a17cac82347a5005e98f96d05a",
    evaluated_epoch: Epoch25,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch2_5-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b9ff17fe444b65e241e289970cc5554a2c06aaec83f8d5afb7689c3ee9a10b3e",
    evaluated_epoch: Epoch30,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "79d3322b940ef4451eefdf0db57833404857cd288730349e890f3a63e2fbef6b",
    evaluated_epoch: Epoch30,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "72c69d8f4fd634723205356e200a3e299cddfba809748e3b312be45923c257f6",
    evaluated_epoch: Epoch31,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_1-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "3ce4b9c066119a352560f61a439de269923754394557e70cc4ae7b028c7f1b84",
    evaluated_epoch: Epoch31,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_1-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "0cdf688e230ab2392328f14267150332687dcc5f87642ba7c1f3728090fd4371",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "84b591bcccf8e6605c27e04fa7f1c5e231ca25d42626c5d01762e0f9e7f0790a",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "caeb1661d2666be89adc574fb94c70fc9097202fcf07277518df9d4bb70f0971",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-4.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "cacb25277b79204d859487424a6e58ec1204dd884f5f80baa8dbb8d44d1408d5",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-4.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "981d584770a97b8e5526a7e3ae40ac3e2f37556e15adb78b2bc00cf7c9f7f977",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-4.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "03174f09e605ec25561716556a07eb87401f31c38f60b88d1581a29e2c87e653",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-4.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7b1691e01912fdface36ce236fe17c1fd6a30b042e6353f5b53f12a01ea45e54",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-4.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "8fc2c5282a760e8663f9404987f6008a11e27fe997238288b0ef596036cf4da3",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-4.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
]
