stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_analysis_tests__check_error_kind_contract_call_expect_name_ccall.snap
---
source: stackslib/src/chainstate/tests/runtime_analysis_tests.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "0ed413e65d779028e446a5084abe41dfe99942dda9007a11ce59ee159199d25b",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-1, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 86,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10282,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 86,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10282,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "1f30d68d4acc5dd76b1339826c5c2e250fd6e407ca7a722d66380421a6a307d9",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-2, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 103,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 11212,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 103,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 11212,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "e492cab7e7fd788b41982e9e19a31874964ab13a3bd61b02d1ce5ec50de47bfc",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-3-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: use of undeclared trait <default-target>) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 21,
          write_count: 1,
          read_length: 5,
          read_count: 2,
          runtime: 8455,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 21,
      write_count: 1,
      read_length: 5,
      read_count: 2,
      runtime: 8455,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "332edf4cf46b9042daabb3f9e061fa3d9d47dc08efd796146d41a02555a7f6c4",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-3-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 293,
          write_count: 2,
          read_length: 9,
          read_count: 3,
          runtime: 20648,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 293,
      write_count: 2,
      read_length: 9,
      read_count: 3,
      runtime: 20648,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "648aa0bd75d6fcdd2b214f33f2bb477e45fb26100da045b0eed27248674e8950",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-3-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 293,
          write_count: 2,
          read_length: 9,
          read_count: 3,
          runtime: 20648,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 293,
      write_count: 2,
      read_length: 9,
      read_count: 3,
      runtime: 20648,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ee312241064ac7ac37096ee1c01f17c74c569775257769b024e49758ff62d6ba",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-3-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 293,
          write_count: 2,
          read_length: 9,
          read_count: 3,
          runtime: 20648,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 293,
      write_count: 2,
      read_length: 9,
      read_count: 3,
      runtime: 20648,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "acf96313b1b0cc9776af1af52b117b3e9b5a5575b75169253aa9b8b24efcae8a",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "ContractCall(address: ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP, contract_name: contract-3-Epoch3_3-Clarity1, function_name: trigger-error, function_args: [[]])",
        vm_error: "Some(NoSuchContract(\"ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.contract-3-Epoch3_3-Clarity1\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 0,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 0,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "599b26ffb52fb5b22a6e127b5d4afc98a6c663aac4f04fcc5d92e905ea3c8d15",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "ContractCall(address: ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP, contract_name: contract-3-Epoch3_3-Clarity2, function_name: trigger-error, function_args: [[]])",
        vm_error: "Some(ContractCallExpectName) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 420,
          read_count: 3,
          runtime: 654,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 420,
      read_count: 3,
      runtime: 654,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "fd1c86eef556a32a899997a31db976de8c03af5e65f52ca2983661ba6df692e7",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "ContractCall(address: ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP, contract_name: contract-3-Epoch3_3-Clarity3, function_name: trigger-error, function_args: [[]])",
        vm_error: "Some(ContractCallExpectName) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 420,
          read_count: 3,
          runtime: 654,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 420,
      read_count: 3,
      runtime: 654,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "22a8f5603701eecc5d645dd3554254fece09f1848fdc03a033b34f9cb78e6f2e",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "ContractCall(address: ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP, contract_name: contract-3-Epoch3_3-Clarity4, function_name: trigger-error, function_args: [[]])",
        vm_error: "Some(ContractCallExpectName) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 420,
          read_count: 3,
          runtime: 654,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 420,
      read_count: 3,
      runtime: 654,
    ),
  )),
]
