stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_analysis_tests__check_error_kind_name_already_used_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_analysis_tests.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "8d956af6b22c472853f432445276d339d3b57589470915f8cc1fad0bd18c925a",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(NameAlreadyUsed(\"ft-get-supply\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 8785,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 8785,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "8b7761df3fd27db36b9404e749873142c142765a57f8666182b8ff94d71f7993",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(NameAlreadyUsed(\"ft-get-supply\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 8785,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 8785,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b7d9404c1c78ec26e95098011f38980125abedd76afd12ca0f0125ff896003d5",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(NameAlreadyUsed(\"ft-get-supply\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 8785,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 8785,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "4b6f883ccf3127c3005bc46c750f5e31ccfcff306529eea14dab05c44b3f0568",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(NameAlreadyUsed(\"ft-get-supply\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 8785,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 8785,
    ),
  )),
]
